--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <h1>What's Your Soundcloud Username?</h1>
       <p><input type="text" class="form-control"></p>
-      <p><a class="btn btn-lg btn-success" href="#" role="button">Find shows nearby</a></p>
+      <p><a class="btn btn-lg btn-success" href="/soundcloud" role="button">Get faves</a></p>
     </div>
   </div>
 
