--- a/app/views/welcome/soundcloud.html.erb
+++ b/app/views/welcome/soundcloud.html.erb
@@ -2,6 +2,9 @@
   <div class="jumbotron row">
     <div class="col-lg-12">
       <p><a class="btn btn-lg btn-success" href="#" role="button">Find shows nearby</a></p>
+      <hr>
+      <h1>Fave tracks</h1>
+      <hr>
       <% @liked_artists.each do |a| %>
         <p><%= a[0] %></p>
       <% end %>
