--- a/app/views/welcome/soundcloud.html.erb
+++ b/app/views/welcome/soundcloud.html.erb
@@ -1,7 +1,9 @@
 <div class="container text-center">
   <div class="jumbotron row">
     <div class="col-lg-12">
-      <p><a class="btn btn-lg btn-success" href="#" role="button">Find shows nearby</a></p>
+      <p>
+        <a class="btn btn-lg btn-success" href="/shows" role="button">Find shows nearby</a>
+      </p>
       <hr>
       <h1>Fave tracks</h1>
       <hr>
