--- a/app/views/welcome/shows.html.erb
+++ b/app/views/welcome/shows.html.erb
@@ -7,6 +7,13 @@
       <% @shows.each do |artist, events| %>
         <% if events.count > 0 %>
           <h3><%= artist %></h3>
+          <h4>Tracks</h4>
+
+          <% @api_urls.each do |url| %>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" src="<%= url %>"></iframe>
+          <% end %>
+
+          <h4>You Might Also Like...</h4>
           <% events.each do |e| %>
             <p><%= e['title'] rescue '' %></p>
             <p><%= link_to 'Buy tix', e['ticket_url'], target: '_blank' rescue '' %></p>
