--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,3 +10,13 @@ p {
   width: 50%;
   margin: 10px auto !important;
 }
+
+footer {
+  color: white;
+}
+
+.jumbotron {
+  -webkit-box-shadow: 0 1px 1px 2px rgba(0,0,0,.1) !important;
+  -moz-box-shadow: 0 1px 1px 2px rgba(0,0,0,.1) !important;
+  box-shadow: 0 1px 1px 2px rgba(0,0,0,.1) !important;
+}
