--- a/app/views/welcome/soundcloud.html.erb
+++ b/app/views/welcome/soundcloud.html.erb
@@ -1,14 +1,16 @@
 <div class="container text-center">
   <div class="jumbotron row">
     <div class="col-lg-12">
+      <h1>Fave tracks</h1>
+      <hr>
+      <% @liked_artists.sample(10).each do |a| %>
+        <p><%= a[0] %></p>
+      <% end %>
+      <p>...</p>
+      <hr>
       <p>
         <a class="btn btn-lg btn-success" href="/shows" role="button">Get more music</a>
       </p>
-      <h1>Fave tracks</h1>
-      <hr>
-      <% @liked_artists.each do |a| %>
-        <p><%= a[0] %></p>
-      <% end %>
     </div>
   </div>
 
