more styling; sc back in

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-  margin: 200px auto !important;
+  margin: 150px auto !important;
   width: 60%;
 }
 
@@ -12,7 +12,7 @@ p {
 }
 
 footer {
-  color: white;
+  background-color: white !important;
 }
 
 .jumbotron {
