--- a/app/views/welcome/soundcloud.html.erb
+++ b/app/views/welcome/soundcloud.html.erb
@@ -2,7 +2,7 @@
   <div class="jumbotron row">
     <div class="col-lg-12">
       <p>
-        <a class="btn btn-lg btn-success" href="/shows" role="button">Find shows nearby</a>
+        <a class="btn btn-lg btn-success" href="/shows" role="button">Get more music</a>
       </p>
       <h1>Fave tracks</h1>
       <hr>
