--- a/app/views/welcome/shows.html.erb
+++ b/app/views/welcome/shows.html.erb
@@ -1,10 +1,10 @@
 <div class="container text-center">
   <div class="jumbotron row">
     <div class="col-lg-12">
-      <h1>Artists</h1>
-      <hr>
       <% @shows.sort { |a,b| b[:events].count <=> a[:events].count }.each do |s| %>
+
           <h3><%= s[:artist] %></h3>
+
           <% if s[:tracks].length > 0 %>
             <h4>Tracks</h4>
             <% s[:tracks].each do |t| %>
@@ -16,7 +16,7 @@
             <h4>You Might Also Like...</h4>
             <% s[:events].each do |e| %>
               <p><%= e['title'] rescue '' %></p>
-              <p><%= link_to 'Buy tix', e['ticket_url'], target: '_blank', class: 'btn btn-primary' rescue '' %></p>
+              <p><%= link_to 'Buy tix', e['ticket_url'], target: '_blank', class: 'btn btn-lg btn-primary' rescue '' %></p>
             <% end %>
           <% end %>
           <hr>
